Fix for new domain

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,12 +46,12 @@
                     <li><i class="js-volume material-icons is-on">volume_up</i></li>
                   {% endif %}
                   {% if page.handle == 'hearthstone' %}
-                    <li><a href="/">Overwatch</a></li>
+                    <li><a href="{{ '/' | relative_url }}">Overwatch</a></li>
                   {% else %}
-                    <li><a href="/hearthstone">Hearthstone</a></li>
+                    <li><a href="{{ '/hearthstone' | relative_url }}">Hearthstone</a></li>
                   {% endif %}
                   <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
-                  <li><a href="/about">About</a></li>
+                  <li><a href="{{ '/about' | relative_url }}">About</a></li>
               </ul>
           </div>
       </div>
@@ -79,13 +79,13 @@
 
     <footer class="footer text-align--center medium-down--show">
       {% if page.handle == 'hearthstone' %}
-        <a href="{{ "/" | relative_url }}" title="Overwatch">Switch to Overwatch</a>
+        <a href="{{ '/' | relative_url }}" title="Overwatch">Switch to Overwatch</a>
       {% elsif page.handle == 'overwatch' %}
-        <a href="{{ "/hearthstone" | relative_url }}" title="Hearthstone">Switch to Hearthstone</a>
+        <a href="{{ '/hearthstone' | relative_url }}" title="Hearthstone">Switch to Hearthstone</a>
       {% endif %}
       <ul>
         <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="{{ '/about' | relative_url }}">About</a></li>
       </ul>
     </footer>
 
