--- a/_sass/_overwatch.scss
+++ b/_sass/_overwatch.scss
@@ -236,7 +236,18 @@
   }
  }
 
- #crate li.wrecking {
+#crate li.ashe {
+  background-image: url(../images/mobile/ashe.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/ashe-full.jpg);
+  }
+}
+
+#crate li.wrecking {
   background-image: url(../images/mobile/wreckingball.png);
   background-repeat: no-repeat;
   background-position: right;
