--- a/_layouts/hearthstone.html
+++ b/_layouts/hearthstone.html
@@ -9,6 +9,9 @@ title: hearthstone
       <div>
           <img title="Classic pack" href="#" src="{{ "images/pack.png" | relative_url }}" class="btn" data-pack="EXPERT1"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
       </div>
+      <!--<div>
+        <img title="Rastakhan's Rumble pack" href="#" src="{{ "images/packrasta.png" | relative_url }}" class="btn troll" data-pack="TROLL"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
+      </div>-->
       <div>
           <img title="Kobolds and catacombs pack" href="#" src="{{ "images/packkac.png" | relative_url }}" class="btn kac" data-pack="LOOTAPALOOZA"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
       </div>
