--- a/_layouts/hearthstone.html
+++ b/_layouts/hearthstone.html
@@ -13,6 +13,9 @@ title: hearthstone
         <img title="Rastakhan's Rumble pack" href="#" src="{{ "images/packrasta.png" | relative_url }}" class="btn troll" data-pack="TROLL"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
       </div>-->
       <div>
+        <img title="Boomsday" href="#" src="{{ "images/packboomsday.png" | relative_url }}" class="btn tww" data-pack="BOOMSDAY"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
+      </div>
+      <div>
           <img title="Kobolds and catacombs pack" href="#" src="{{ "images/packkac.png" | relative_url }}" class="btn kac" data-pack="LOOTAPALOOZA"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
       </div>
       <div>
