--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
         <div id="alert">
           <ul>
             <li>
-              <p><a href="https://buymeacoff.ee/lootjunkie" title="donate" target="_blank">Like us? Please <u>consider donating</u> to help keep the site running</a></p>
+              <p>Rastakhan's Rumble coming December 4th</p>
             </li>
           </ul>
         </div>
