--- a/_layouts/hearthstone.html
+++ b/_layouts/hearthstone.html
@@ -9,9 +9,9 @@ title: hearthstone
       <div>
           <img title="Classic pack" href="#" src="{{ "images/pack.png" | relative_url }}" class="btn" data-pack="EXPERT1"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
       </div>
-      <!--<div>
+      <div>
         <img title="Rastakhan's Rumble pack" href="#" src="{{ "images/packrasta.png" | relative_url }}" class="btn troll" data-pack="TROLL"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
-      </div>-->
+      </div>
       <div>
         <img title="Boomsday" href="#" src="{{ "images/packboomsday.png" | relative_url }}" class="btn tww" data-pack="BOOMSDAY"  onclick="ga('send', 'event', 'Generate pack', 'Click', 'Open pack');">
       </div>
