--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relative_url }}">
     <title>{{ page.title }}</title>
     <link href="{{ "assets/style.css" | relative_url }}" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
@@ -59,11 +59,10 @@
 
     <section class="news shadow {{ page.handle }}">
       <div class="container text-align--center">
-        <i class="material-icons">favorite</i>
         <div id="alert">
           <ul>
             <li>
-              <p>Rastakhan's Rumble coming December 4th</p>
+              <p>Enjoying your time? Help us <a href="https://www.buymeacoffee.com/matouio" target="_blank">keep lootjunkie alive!</a></p>
             </li>
           </ul>
         </div>
