--- a/assets/style.scss
+++ b/assets/style.scss
@@ -5,7 +5,7 @@
   Variables
 ==============================================================================*/
 
-$font-stack: 'Raleway', sans-serif;
+$font-stack: 'Rubik', sans-serif;
 $ow: #f99e1a;
 $hs: #2797e8;
 
@@ -157,7 +157,7 @@ header {
     display: inline-block;
   }
   a{
-    text-decoration: none;
+    //text-decoration: none;
   }
   ul {
     list-style: none;
