--- a/_sass/_overwatch.scss
+++ b/_sass/_overwatch.scss
@@ -269,6 +269,17 @@
   }
 }
 
+#crate li.baptiste {
+  background-image: url(../images/mobile/baptiste.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/baptiste-full.jpg);
+  }
+}
+
  #crate li.doomfist {
   background-image: url(../images/mobile/doomfist.png);
   background-repeat: no-repeat;
